<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_Label">Marcelo Shoe Store Inventory</string>
    <string name="label_email">E-mail</string>
    <string name="hint_email">E.g. user@domain.com</string>
    <string name="label_passwd">Password</string>
    <string name="hint_passwd">Type your password here</string>
    <string name="label_login">LOGIN</string>
    <string name="label_create_account">CREATE ACCOUNT</string>
    <string name="greetings">Welcome!</string>
    <string name="description">This is the place to you store your shoes and remember all important details about them! When you buy or get a new shoe, please add it here and have control on your belongs!</string>
    <string name="woman_shoe">Woman shoe</string>
    <string name="man_shoe">Man shoe</string>
    <string name="lets_start">Let\'s get started!</string>
    <string name="shoes_image">Shoes image</string>
    <string name="how_to_label">How to use this app?</string>
    <string name="instructions">We made this app very easy for you! There is just a single button in the next screen, it is an Add button. You just need to press it, fill all the data for the shoe that you want to store and it is all done! How easy was this? Then you can see your show stored in this app afterwards! So,  now it is time to use the app!</string>
    <string name="ready">I am ready!</string>
    <string name="AddTitle">New shoe details</string>
    <string name="shoeName">Shoe name</string>
    <string name="hint_shoeName">Work shoes...</string>
    <string name="labelBrand">Company</string>
    <string name="inputBrand">Nike, Adidas, Puma, ...</string>
    <string name="labelSize">Shoe size</string>
    <string name="hintSize">42, 43, ...</string>
    <string name="label_shoeDescription">Shoe descritpion</string>
    <string name="inut_shoeDescription">E.g. The black and white shoe from the mall</string>
    <string name="label_shoeDate">Date</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Save</string>
    <string name="button_addShoeContent">Add a new shoe</string>
    <string name="logout">Logout</string>
</resources>
